Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33156

Windows XP: QFileDialog::getSaveFileName() does not append default extension according to selected filter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P5: Not important
    • 5.2.0
    • 5.0.0, 5.0.2, 5.1.0
    • None
    • Windows XP SP3
    • 99362fb7f25a88829c2d824ebfe6da61d4d7b35f

    Description

      This was claimed to be fixed in QTBUG-27186, but still does not seem to work. Tested on Windows XP SP3 with 3 different Qt versions as specified. Does not work in the "standarddialogs" example either.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kleint Friedemann Kleint
              kirinyale Andrey Antsut
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes